enhance mobile navigation: body overflow-x bug on iOS

--- a/src/sass/layout/_base.scss
+++ b/src/sass/layout/_base.scss
@@ -13,9 +13,11 @@
 }
 
 // https://stackoverflow.com/questions/8635799/overflow-xhidden-still-can-scroll
-html, body {
-  // overflow-x: hidden; breaks sidebar scrolling
-  width: 100%;
+@media only screen and (max-width: 640px) {
+  html, body {
+    overflow-x: hidden;
+    width: 100%;
+  }
 }
 
 body {
