--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -7,6 +7,10 @@
   .sticky {
     position: inherit;
   }
+
+  .home .sidebar-wrapper {
+    margin: 0 0 30px 0 !important;
+  }
 }
 
 .sidebar h4 {
